--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <img src="./pictures/Logo.png" alt="logo">
     <nav>
       <ul class="nav_links"> 
-        <li><a>Home</a></li>
-        <li><a>Features</a></li>
-        <li><a>Pricing</a></li>
-        <li><a>Blog</a></li>
-        <li><a>Contact</a></li>
+        <li><a href="#section1">Home</a></li>
+        <li><a href="#section2">Features</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#section3">Blog</a></li>
+        <li><a href="#contacts">Contact</a></li>
       </ul>
     </nav>
     <div>
@@ -73,7 +73,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div id="pricing" class="container">
       <div>
         <h2 class="pricing">
           Choose your plan
@@ -149,7 +149,7 @@
   </section>
   
 
-  <footer>
+  <footer id="contacts">
     <div class="footer">
       <div class="footer_content">
         <ul class="frame">
